[gd_scene load_steps=13 format=3 uid="uid://bvyx4dpsvru5j"]

[ext_resource type="Texture2D" uid="uid://biyrsj35smuld" path="res://Image/UI/UI board Medium  stone.png" id="1_7bfcs"]
[ext_resource type="Script" path="res://Script/pause_menu.gd" id="1_pmnwx"]
[ext_resource type="Texture2D" uid="uid://p1nybdw7hj74" path="res://Image/UI/IRONY TITLE  empty.png" id="2_wuo8t"]
[ext_resource type="FontFile" uid="uid://dm0ty0llj8t3r" path="res://Fonts/DungeonFont.ttf" id="3_rof68"]
[ext_resource type="Texture2D" uid="uid://dhlgy3s8b33bu" path="res://Image/UI/UI ICONS_WHITE_pixel art_Sprite Sheet.png" id="4_wicpu"]
[ext_resource type="Texture2D" uid="uid://bp8g77ev4hhlm" path="res://Image/UI/UI ICONS_BLACK_pixel art_Sprite Sheet.png" id="5_ee13b"]
[ext_resource type="Texture2D" uid="uid://bsplmgauk5q2a" path="res://Image/UI/001.png" id="6_qrhbt"]
[ext_resource type="Texture2D" uid="uid://enetih0vhw5g" path="res://Image/UI/001-1.png" id="7_4h77x"]
[ext_resource type="Texture2D" uid="uid://c217q2jp3a6ss" path="res://Image/UI/002.png" id="8_6o68b"]
[ext_resource type="Texture2D" uid="uid://cumvpk15tpyua" path="res://Image/UI/002-1.png" id="9_38njs"]

[sub_resource type="LabelSettings" id="LabelSettings_40wqq"]
font = ExtResource("3_rof68")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_drrnm"]
font = ExtResource("3_rof68")
font_size = 108

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmnwx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(17.8882, 9.44026)
texture = ExtResource("1_7bfcs")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = -44.0
offset_right = 554.0
offset_bottom = 65.0
texture = ExtResource("2_wuo8t")

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_40wqq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXIT" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 314.0
offset_right = 228.0
offset_bottom = 442.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("4_wicpu")
texture_pressed = ExtResource("5_ee13b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 31.0
offset_top = 59.0
offset_right = 664.0
offset_bottom = 291.0
text = "Stage 1"
label_settings = SubResource("LabelSettings_drrnm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GO" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 516.0
offset_top = 302.0
offset_right = 644.0
offset_bottom = 430.0
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("6_qrhbt")
texture_pressed = ExtResource("7_4h77x")

[node name="RE" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 314.0
offset_right = 440.0
offset_bottom = 442.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_6o68b")
texture_pressed = ExtResource("9_38njs")

[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GO" to="." method="_on_go_pressed"]
[connection signal="pressed" from="RE" to="." method="_on_re_pressed"]
